--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         consequuntur rem sed.
     </p>
     <h1>salom mansurov</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus non, aliquam maiores exercitationem quos
+        nesciunt sapiente iusto qui quasi asperiores dolor, minima numquam?</p>
 </body>
 
 </html>
