--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <h1>salom mansurov</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus non, aliquam maiores exercitationem quos
         nesciunt sapiente iusto qui quasi asperiores dolor, minima numquam?</p>
+
+    <p>nimadir</p>
 </body>
 
 </html>
